# TextAnalyzer

./: CHECKLIST_CLIENTE.md  CMakeLists.txt  GUIA_TESTES.md  README.md  TESTE_RAPIDO.md  exemplo_palavras.txt  iniciar_servidor_teste.bat  mainwindow.cpp  mainwindow.h  mainwindow.ui  servidor_teste_mock.py
